<resources>
    <string name="app_name">Movies App</string>
    <string name="search">Search</string>
    <string name="no_results">No results</string>
    <string name="could_not_reach_server">Couldn\'t reach server.\n Check your internet connection.</string>
    <string name="max_rating">/10</string>
    <string name="production">Production:</string>
    <string name="budget">Budget:</string>
    <string name="revenue_title">Revenue:</string>
    <string name="revenue">Revenue</string>
    <string name="release_date_title">Release Date:</string>
    <string name="release_date">Release Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_by">sort by</string>
    <string name="filter_by_year">filter by year</string>
    <string name="clear_all">Clear All</string>
    <string name="ascending">ascending</string>
    <string name="descending">descending</string>
    <string name="filter_by_genres">filter by genres</string>
    <string name="all_years">All years</string>
    <string name="popularity">Popularity</string>
    <string name="vote_average">Vote average</string>
    <string name="movie_title">Movie title</string>
    <string name="asc">asc</string>
    <string name="desc">desc</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
</resources>