<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_black_gradient"
    tools:context=".ui.fragments.FilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterElementsContainer"
        android:layout_width="@dimen/filters_container_width"
        android:layout_height="@dimen/filters_container_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_8x"
        android:background="@drawable/bg_black_semitransparent_rounded"
        android:backgroundTint="@android:color/black">

        <TextView
            android:id="@+id/sortByTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_1.75x"
            android:paddingTop="@dimen/spacing_1.75x"
            android:paddingBottom="@dimen/spacing_0.5x"
            android:text="@string/sort_by"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/filter_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/sortBySpinner"
            style="@style/FilterSpinner"
            android:layout_width="@dimen/filter_spinner_width"
            android:layout_height="@dimen/filter_spinner_height"
            android:layout_marginStart="@dimen/spacing_1.5x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortByTitle" />

        <TextView
            android:id="@+id/orderingIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_0.25x"
            android:padding="@dimen/spacing_0.75x"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/ascending"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_large"
            app:drawableBottomCompat="@drawable/ic_ascending"
            app:drawableTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/firstSeparateLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@drawable/overline"
            app:layout_constraintTop_toBottomOf="@+id/orderingIcon" />

        <TextView
            android:id="@+id/filterByYearTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_1.75x"
            android:paddingTop="@dimen/spacing_1.75x"
            android:paddingBottom="@dimen/spacing_0.5x"
            android:text="@string/filter_by_year"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/filter_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/firstSeparateLine" />

        <Spinner
            android:id="@+id/filterByYearSpinner"
            style="@style/FilterSpinner"
            android:layout_width="@dimen/filter_spinner_width"
            android:layout_height="@dimen/filter_spinner_height"
            android:layout_marginStart="@dimen/spacing_1.5x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterByYearTitle" />

        <View
            android:id="@+id/secondSeparateLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="@dimen/spacing_1.75x"
            android:background="@drawable/overline"
            app:layout_constraintTop_toBottomOf="@+id/filterByYearSpinner" />

        <TextView
            android:id="@+id/filterByGenresTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_1.75x"
            android:text="@string/filter_by_genres"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/filter_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/secondSeparateLine" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/genresRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_2x"
            app:layout_constraintBottom_toTopOf="@+id/clearAllButton"
            app:layout_constraintTop_toBottomOf="@+id/filterByGenresTitle"
            tools:itemCount="4"
            tools:listitem="@layout/genre_filter_item" />

        <TextView
            android:id="@+id/clearAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_2.5x"
            android:background="@drawable/rounded_outlined_transparent_background"
            android:paddingHorizontal="@dimen/spacing_3x"
            android:paddingVertical="@dimen/spacing_0.75x"
            android:text="@string/clear_all"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>