<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:paddingHorizontal="@dimen/spacing_2x"
    android:paddingVertical="@dimen/spacing_3.75x">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="@dimen/spacing_5x"
            android:layout_height="@dimen/spacing_5x"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_7x"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Lion The King \n (2019)" />

        <ImageView
            android:id="@+id/moviePosterImage"
            android:layout_width="@dimen/movie_cover_image_width"
            android:layout_height="@dimen/movie_cover_image_height"
            android:layout_marginTop="@dimen/spacing_2.5x"
            android:background="@color/lilac"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

        <RatingBar
            android:id="@+id/movieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_minus_6x"
            android:numStars="5"
            android:rating="3"
            android:scaleX=".6"
            android:scaleY=".6"
            android:stepSize="0.5"
            android:theme="@style/MovieRating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviePosterImage" />

        <TextView
            android:id="@+id/maxRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@+id/movieRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movieRating" />

        <TextView
            android:id="@+id/ratingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_minus_0.25x"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/maxRating"
            app:layout_constraintEnd_toStartOf="@id/maxRating"
            tools:text="7.2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/genresRecycleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieRating"
            tools:itemCount="2"
            tools:listitem="@layout/genre_item" />

        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_0.75x"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genresRecycleView" />

        <FrameLayout
            android:id="@+id/youtubeFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_0.75x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieDescription" />

        <ImageView
            android:id="@+id/closeTrailerVideoButton"
            android:layout_width="@dimen/spacing_3x"
            android:layout_height="@dimen/spacing_3x"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="@+id/youtubeFragmentContainer"
            app:layout_constraintTop_toTopOf="@+id/youtubeFragmentContainer"
            app:tint="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/movieTrailersViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="@dimen/spacing_0.75x"
            app:layout_constraintBottom_toTopOf="@+id/productionText"
            app:layout_constraintTop_toBottomOf="@+id/movieDescription" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/movieTrailersTabLayout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacing_1x"
            app:tabBackground="@drawable/tab_pager_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/movieTrailersViewPager"/>

        <TextView
            android:id="@+id/productionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_0.75x"
            android:text="@string/production"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youtubeFragmentContainer" />

        <TextView
            android:id="@+id/productionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_0.5x"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@+id/productionTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productionTitle" />

        <TextView
            android:id="@+id/budgetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_0.75x"
            android:text="@string/budget"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productionTitle" />

        <TextView
            android:id="@+id/budgetText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_0.5x"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@+id/budgetTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/budgetTitle" />

        <TextView
            android:id="@+id/revenueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_0.75x"
            android:text="@string/revenue"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budgetTitle" />

        <TextView
            android:id="@+id/revenueText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_0.5x"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@+id/revenueTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/revenueTitle" />

        <TextView
            android:id="@+id/releaseDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_0.75x"
            android:text="@string/release_date"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/revenueTitle" />

        <TextView
            android:id="@+id/releaseDateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_0.5x"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@+id/releaseDateTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/releaseDateTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>